# vm

./: Cargo.toml  build.rs  rustfmt.toml
.github/workflows/: ci.yml
src/: allocator.rs  c_api.rs  commands.rs  commands_bus.rs  commands_old.rs  commands_reader.rs  data.rs  gapi.rs  lib.rs  module.rs  state.rs
src/c/: commands.c  memory.c  types.h  vritual_alloc_linux.c
src/commands/: mod.rs
src/commands/gapi/: draw_quads.rs  draw_texts.rs  mod.rs  set_color_pipeline.rs  set_texture_pipeline.rs
