[package]
name = "vm"
version = "0.1.0"
authors = ["Andrey Kabylin <andrey@kabylin.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.4.0"
lazy_static = "1.4.0"
assert_approx_eq = "1.1.0"

[build-dependencies]
cc = "1.0"
